Created "Available Now" page skeleton

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -49,10 +49,10 @@
         <ion-row>
           <ion-col>
             <app-feature-icon
-              label="Available Now"
+              label="Coming Soon"
               icon="available"
               [color]="utils.getCssVarValue('--ion-color-available')"
-              (click)="goToPage($event, '#8BAfE5', '/available', 'available', 'Available Now')"
+              (click)="goToPage($event, '#e1f47b', '/available', 'available', 'Available Now')"
             ></app-feature-icon>
           </ion-col>
           <ion-col>
