--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -128,12 +128,12 @@
   --ion-color-chores-shade: #e0b697;
   --ion-color-chores-tint: #fed4b4;
 
-  --ion-color-available: #c5d7f2;
-  --ion-color-available-rgb: 197,215,242;
+  --ion-color-available: #e1f47b;
+  --ion-color-available-rgb: 225,244,123;
   --ion-color-available-contrast: #000000;
   --ion-color-available-contrast-rgb: 0,0,0;
-  --ion-color-available-shade: #adbdd5;
-  --ion-color-available-tint: #cbdbf3;
+  --ion-color-available-shade: #c6d76c;
+  --ion-color-available-tint: #e4f588;
 
   --ion-color-settings: #cad9e2;
   --ion-color-settings-rgb: 202,217,226;
