--- a/src/app/pages/available/available.page.scss
+++ b/src/app/pages/available/available.page.scss
@@ -4,7 +4,7 @@
   padding: 0 20px;
 
   .critter {
-    flex: 1 0 80px;
+    flex: 0 0 80px;
     padding: 10px 2px;
     display: flex;
     flex-direction: column;
@@ -38,35 +38,30 @@
 }
 
 .filters-container {
-  display: flex;
-  margin-top: 10px;
-  flex-wrap: wrap;
-  
-  position: relative;
-  height: 42px;
-  transition: height .3s ease-in-out;
-  overflow: hidden;
+  margin-top: 5px;
+  padding: 5px 0;
+  border-radius: 10px;
+  background-color: var(--ion-color-step-100);
 
-  .expand-button {
-    position: absolute;
-    right: 0px;
-    z-index: 21;
-    height: 32px;
-    margin-right: 0;
-    margin-left: 0;
-    background: var(--ion-color-light);
+  .filters-title {
+    display: block;
+    margin: 0 5px;
+    font-weight: 700;
+    font-size: 12px;
   }
 
-  ion-chip {
-    flex: 0 0 auto;
-    &.active {
-      background: rgb(var(--ion-color-island-rgb));
+  .filters-chips-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 90px;
+    overflow-x: auto;
+    
+    ion-chip {
+      flex: 0 0 auto;
+      &.active {
+        background: rgb(var(--ion-color-island-rgb));
+      }
     }
-  }
-
-  &.open {
-    overflow: auto;
-    height: 30vh;
-    box-shadow: inset 0px -5px 22px -22px rgba(0,0,0,1);
   }
 }
