--- a/src/app/pages/available/available.page.html
+++ b/src/app/pages/available/available.page.html
@@ -44,6 +44,7 @@
           *ngFor="let item of availableNow.bugs"
           (click)="openDetails(item)"
           [ngClass]="{'caught': item.caught}"
+          [@inOutAnimation]
         >
           <ion-avatar>
             <ion-img [src]="item.iconBase64"></ion-img>
