--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -7,7 +7,7 @@
         This is a companion app for Animal Crossing™: New Horizons™ that aims to help you have a better island life.
       </p>
       <p>
-        It is not affiliated or supported by Nintendo™ in any way, it's just a fan project.
+        It is not affiliated or supported by Nintendo™.
       </p>
       <ion-button class="btn-next" (click)="next(2)">Next</ion-button>
     </ion-slide>
