--- a/src/app/pages/island/island.page.scss
+++ b/src/app/pages/island/island.page.scss
@@ -50,7 +50,7 @@ ion-list-header {
   background-color: var(--ion-background-color);
   border-radius: 25px;
   padding: 10px 10px 20px 10px;
-  margin: 20px 0;
+  margin: 20px 0 120px;
 
   .card-accent-icon {
     position: absolute;
